--- a/index.html
+++ b/index.html
@@ -82,3 +82,10 @@
 </body>
 
 </html>
+<script type="text/javascript">
+	if('serviceWorker' in navigator) {
+    navigator.serviceWorker.register('service_worker.js');
+};
+</script>
+
+
